Fixed aligning dialog in the middle.

--- a/src/main.scss
+++ b/src/main.scss
@@ -87,6 +87,7 @@
         width: 100%;
         box-sizing: border-box;
         margin: auto;
+        top: 0;
         // left: 50%;
         // transform: translateX(-50%);
         @media #{$tablet} {
